# wortle

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Wortliste.txt  wortle.cabal  wortle.hs
app/: wortle.hs
